# flutter_app

./: README.md  codemagic.yaml
ESP32-S3-LCD-2.8C-Test/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  日志.txt
ESP32-S3-LCD-2.8C-Test/build_ebaj2/: .bin_timestamp  .ninja_deps  .ninja_log  CMakeCache.txt  app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  project_description.json  x509_crt_bundle.S
ESP32-S3-LCD-2.8C-Test/docs/: EBAJ1_PROTOCOL.md  ESP32S3_EBAJI_IMPLEMENTATION.md
ESP32-S3-LCD-2.8C-Test/main/: CMakeLists.txt  Kconfig.projbuild  main.c
ESP32-S3-LCD-2.8C-Test/main/Badge/: BadgeDisplay.c  BadgeDisplay.h  BadgeIndexed.c  BadgeIndexed.h  BadgeLz4.c  BadgeLz4.h  BadgeProtocol.c  BadgeProtocol.h  BadgeStorage.c  BadgeStorage.h  BadgeStream.c  BadgeStream.h
ESP32-S3-LCD-2.8C-Test/main/Button_Driver/: Button_Driver.c  Button_Driver.h
ESP32-S3-LCD-2.8C-Test/main/LCD_Driver/: ST7701S.c  ST7701S.h
ESP32-S3-LCD-2.8C-Test/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
ESP32-S3-LCD-2.8C-Test/main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
ESP32-S3-LCD-2.8C-Test/main/SD_Card/: SD_MMC.c  SD_MMC.h
ESP32-S3-LCD-2.8C-Test/main/Simulated_Gesture/: Simulated_Gesture.c  Simulated_Gesture.h
ESP32-S3-LCD-2.8C-Test/main/Wireless/: WifiUpload.c  WifiUpload.h  Wireless.c  Wireless.h
ESP32-S3-LCD-2.8C-Test/tools/: check_badge_indexed.py  check_sd_paths.py  (+5 more)
app_gif/: .gitignore  README.md  codemagic.yaml  pubspec.yaml
docs/: privacy.html  support.html
(+188 files in other folders)
